--- a/package.json
+++ b/package.json
@@ -6,15 +6,39 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:push": "npx drizzle-kit push",
+    "db:studio": "npx drizzle-kit studio"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.2.4"
+    "@clerk/nextjs": "^6.14.0",
+    "@google/generative-ai": "^0.24.0",
+    "@neondatabase/serverless": "^1.0.0",
+    "@radix-ui/react-collapsible": "^1.1.8",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "drizzle-orm": "^0.41.0",
+    "lucide-react": "^0.487.0",
+    "moment": "^2.30.1",
+    "navigation": "^6.3.0",
+    "next": "15.2.4",
+    "next-themes": "^0.4.6",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-hook-speech-to-text": "^0.8.0",
+    "react-webcam": "^7.2.0",
+    "sonner": "^2.0.3",
+    "tailwind-merge": "^3.2.0",
+    "tw-animate-css": "^1.2.5",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "@tailwindcss/postcss": "^4.1.3",
+    "autoprefixer": "^10.4.21",
+    "drizzle-kit": "^0.30.6",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.3"
   }
 }
